Exercises 1-8 W2D2 Not sure what i´ve done in exercise 20

--- a/week2/day2/exercises/Exercises_1-8.ipynb
+++ b/week2/day2/exercises/Exercises_1-8.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {
     "tags": []
    },
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
       "text/plain": "False"
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 28
     }
    ],
    "source": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {
     "tags": []
    },
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 87,
    "metadata": {
     "tags": []
    },
@@ -754,20 +754,21 @@
       "text/plain": "True"
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 87
     }
    ],
    "source": [
     "#your code here\n",
-    "def f_s():\n",
-    "    h = \"nada\"\n",
-    "    print (h)\n",
-    "    print (h + str(lista[0]))\n",
-    "    if (len(h+str(lista[0]))) == 6:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False\n",
-    "f_s()"
+    "h = [\"nada\"]\n",
+    "def f_s(listo):\n",
+    "    for element in listo:\n",
+    "        print (element)\n",
+    "        print (element + str(lista[0]))\n",
+    "        if (len(element+str(lista[0]))) == 6:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "f_s(listo = h)"
    ]
   },
   {
@@ -779,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 97,
    "metadata": {
     "tags": []
    },
@@ -787,18 +788,18 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "nada\nnada15\n"
+     "text": "unos\nunos15\n['unos', 'dos', 'tres']\n"
     }
    ],
    "source": [
     "#your code here\n",
-    "lista_aux = [\"uno\",\"dos\",\"tres\",\"cuatro\",\"cinco\",\"seis\",\"siete\"]\n",
-    "def funcion_usa_f_s (f_s , lista):\n",
-    "    for elemento in lista_aux:\n",
-    "        lista = elemento\n",
-    "        if f_s == \"True\":\n",
-    "            lista_aux.pop(0)\n",
-    "funcion_usa_f_s(f_s= f_s() , lista= lista_aux)\n"
+    "lista_aux = [\"unos\",\"dos\",\"tres\",\"cuatro\",\"cinco\",\"seis\",\"siete\"]\n",
+    "def funcion_usa_f_s (f_s, lista):\n",
+    "    for listo in lista:\n",
+    "        if f_s == True:\n",
+    "            lista_aux.pop()\n",
+    "funcion_usa_f_s(f_s= f_s(listo= lista_aux), lista= lista_aux)\n",
+    "print(lista_aux)"
    ]
   },
   {
@@ -810,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {
     "tags": []
    },
@@ -842,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {
     "tags": []
    },
@@ -892,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {
     "tags": []
    },
@@ -936,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {
     "tags": []
    },
@@ -988,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {
     "tags": []
    },
@@ -1131,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {
     "tags": []
    },
@@ -1168,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1178,7 @@
       "text/plain": "15"
      },
      "metadata": {},
-     "execution_count": 40
+     "execution_count": 44
     }
    ],
    "source": [
@@ -1211,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {
     "tags": []
    },
@@ -1241,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {
     "tags": []
    },
@@ -1263,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {
     "tags": []
    },
@@ -1284,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {
     "tags": []
    },
@@ -1305,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "metadata": {
     "tags": []
    },
@@ -1326,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {
     "tags": []
    },
@@ -1347,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "metadata": {
     "tags": []
    },
@@ -1371,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "metadata": {
     "tags": []
    },
@@ -1407,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 53,
    "metadata": {
     "tags": []
    },
@@ -1434,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 54,
    "metadata": {
     "tags": []
    },
@@ -1473,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 55,
    "metadata": {
     "tags": []
    },
@@ -1533,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1571,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1587,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1603,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1619,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
