--- a/week3/test/Precurse_Exam.ipynb
+++ b/week3/test/Precurse_Exam.ipynb
@@ -89,11 +89,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Numeros repetidos:\n[2, 3, 7]\nLista sin repeticiones\n{1, 2, 3, 4, 6, 7, 8}\n"
+    }
+   ],
    "source": [
-    "# Respuesta ejercicio 3"
+    "# Respuesta ejercicio 3\n",
+    "def repeticiones (a):\n",
+    "    import collections\n",
+    "    print(\"Numeros repetidos:\")\n",
+    "    print([item for item, count in collections.Counter(a).items() if count > 1])\n",
+    "    b = set (a)\n",
+    "    print(\"Lista sin repeticiones\")\n",
+    "    print(b)\n",
+    "repeticiones (a = [2,2,4,3,7,7,7,8,6,7,3,1,2])\n"
    ]
   },
   {
@@ -325,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3-final"
   },
   "mimetype": "text/x-python",
   "name": "python",
