--- a/week3/test/Precurse_Exam.ipynb
+++ b/week3/test/Precurse_Exam.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,17 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Numeros repetidos:\n[2, 3, 7]\nLista sin repeticiones\n{1, 2, 3, 4, 6, 7, 8}\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Respuesta ejercicio 3\n",
     "def repeticiones (a):\n",
@@ -135,10 +129,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Respuesta ejercicio 4"
+    "# Respuesta ejercicio 4\n",
+    "num_dni = 0\n",
+    "let_dni =\"w\"\n",
+    "tip_ord = True\n",
+    "nada = None\n",
+    "lista_deseo = [\"Cazuela\", \"mechero\", \"cuchillo\", \"cuerda\"]\n",
+    "tupla_ropa = (\"Element\", \"Quicksilver\", \"Airwalk\")\n",
+    "dict_info = {\"nombre\":\"Jalex\",\"edad\":47}\n",
+    "flo_hor = 15.57\n",
+    "lista_examen = [num_dni, let_dni, tip_ord, nada, lista_deseo, tupla_ropa, dict_info, flo_hor ]\n"
    ]
   },
   {
@@ -294,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
