--- a/week3/test/Precurse_Exam.ipynb
+++ b/week3/test/Precurse_Exam.ipynb
@@ -45,9 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Se ha generado la siguiente lista de n_gramas:\n['qwe', 'wer', 'ert', 'rty', 'tyu', 'yui']\n"
+    }
+   ],
    "source": [
     "# Respuesta ejercicio 2\n",
     "def n_grama ():\n",
@@ -89,11 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Numeros repetidos:\n[2, 3, 7]\nLista sin repeticiones\n{1, 2, 3, 4, 6, 7, 8}\n"
+    }
+   ],
    "source": [
     "# Respuesta ejercicio 3\n",
     "def repeticiones (a):\n",
@@ -128,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -178,11 +192,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "----Segundo elemento de lista_deseo:\nmechero\n----Calzado que llevo puesto:\nAirwalk\n----Mi nombre:\nJalex\n----Concatenacion de numeros:\n15.57470\n----Todos los elementos en la lista_examen:\n0\nw\nTrue\nNone\n['Cazuela', 'mechero', 'cuchillo', 'cuerda']\n('Element', 'Quicksilver', 'Airwalk')\n{'nombre': 'Jalex', 'edad': 47}\n15.57\n----Todos los elementos de lista_deseo desde lista_examen:\nCazuela\nmechero\ncuchillo\ncuerda\n----Todos los elementos de tupla_ropa seguido de la cadena '-->' y la posición (int) que ocupa en la tupla:\nElement --> 1\nQuicksilver --> 2\nAirwalk --> 3\n----Cada key de dict_info seguido de la cadena ':' seguido de su value:\nnombre : Jalex\nedad : 47\n----Todos los elementos que ocupen una posición menor a 4 en lista_examen.\n0\nw\nTrue\nNone\n"
+    }
+   ],
    "source": [
-    "# Respuesta ejercicio 5"
+    "# Respuesta ejercicio 5\n",
+    "print(\"----Segundo elemento de lista_deseo:\")\n",
+    "print (lista_examen[4][1])\n",
+    "print(\"----Calzado que llevo puesto:\")\n",
+    "print (lista_examen[5][2])\n",
+    "print(\"----Mi nombre:\")\n",
+    "print (lista_examen[6]['nombre'])\n",
+    "print(\"----Concatenacion de numeros:\")\n",
+    "print(str(lista_examen[7])+(str(lista_examen[6]['edad']))+(str(lista_examen[0])))\n",
+    "print(\"----Todos los elementos en la lista_examen:\")\n",
+    "for r in lista_examen:\n",
+    "    print(r)\n",
+    "print(\"----Todos los elementos de lista_deseo desde lista_examen:\")\n",
+    "for q in lista_examen[4]:\n",
+    "    print (q)\n",
+    "print(\"----Todos los elementos de tupla_ropa seguido de la cadena '-->' y la posición (int) que ocupa en la tupla:\")\n",
+    "for c, v in enumerate(lista_examen[5], 1):\n",
+    "    print(v,\"-->\",c)\n",
+    "print(\"----Cada key de dict_info seguido de la cadena ':' seguido de su value:\")\n",
+    "for key, value in lista_examen[6].items():\n",
+    "    print(key,\":\", value)\n",
+    "print(\"----Todos los elementos que ocupen una posición menor a 4 en lista_examen.\")\n",
+    "for w in range(4):\n",
+    "    print (lista_examen[w])\n"
    ]
   },
   {
@@ -203,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
