--- a/week3/test/Precurse_Exam.ipynb
+++ b/week3/test/Precurse_Exam.ipynb
@@ -45,17 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Se ha generado la siguiente lista de n_gramas:\n['qwe', 'wer', 'ert', 'rty', 'tyu', 'yui']\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Respuesta ejercicio 2\n",
     "def n_grama ():\n",
@@ -97,17 +91,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Numeros repetidos:\n[2, 3, 7]\nLista sin repeticiones\n{1, 2, 3, 4, 6, 7, 8}\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Respuesta ejercicio 3\n",
     "def repeticiones (a):\n",
@@ -142,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -192,17 +180,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "----Segundo elemento de lista_deseo:\nmechero\n----Calzado que llevo puesto:\nAirwalk\n----Mi nombre:\nJalex\n----Concatenacion de numeros:\n15.57470\n----Todos los elementos en la lista_examen:\n0\nw\nTrue\nNone\n['Cazuela', 'mechero', 'cuchillo', 'cuerda']\n('Element', 'Quicksilver', 'Airwalk')\n{'nombre': 'Jalex', 'edad': 47}\n15.57\n----Todos los elementos de lista_deseo desde lista_examen:\nCazuela\nmechero\ncuchillo\ncuerda\n----Todos los elementos de tupla_ropa seguido de la cadena '-->' y la posición (int) que ocupa en la tupla:\nElement --> 1\nQuicksilver --> 2\nAirwalk --> 3\n----Cada key de dict_info seguido de la cadena ':' seguido de su value:\nnombre : Jalex\nedad : 47\n----Todos los elementos que ocupen una posición menor a 4 en lista_examen.\n0\nw\nTrue\nNone\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Respuesta ejercicio 5\n",
     "print(\"----Segundo elemento de lista_deseo:\")\n",
@@ -248,11 +230,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Nombre original, Wolfram\nNuevo nombre: Benancio\nEdad de Benancio: 24\n"
+    }
+   ],
    "source": [
-    "# Respuesta ejercicio 6"
+    "# Respuesta ejercicio 6\n",
+    "class Humano:\n",
+    "    def _init_(self, edad, altura, nombre):\n",
+    "        self.edad = edad\n",
+    "        self.altura = altura\n",
+    "        self.nombre = nombre\n",
+    "    def cumplir_edad (self):\n",
+    "        self.edad += 1\n",
+    "    def registro_nombre (self):\n",
+    "        nuevo_nombre = input (\"Introducir el nuevo nombre\")\n",
+    "        self.nombre = nuevo_nombre\n",
+    "\n",
+    "Wolfram = Humano()\n",
+    "Wolfram.edad = 23\n",
+    "Wolfram.altura = 173\n",
+    "Wolfram.nombre = Wolfram\n",
+    "''' TODO no entiendo porque la siguiente linea no me permite imprimir si escribo print(Wolfram.nombre) me da error'''\n",
+    "print (\"Nombre original, Wolfram\") # Si. es una ñapa.\n",
+    "Wolfram.registro_nombre()\n",
+    "Wolfram.cumplir_edad()\n",
+    "print (\"Nuevo nombre:\", Wolfram.nombre)\n",
+    "print(\"Edad de Benancio:\", Wolfram.edad)"
    ]
   },
   {
@@ -268,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
