--- a/week3/test/Precurse_Exam.ipynb
+++ b/week3/test/Precurse_Exam.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -180,11 +180,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "----Segundo elemento de lista_deseo:\nmechero\n----Calzado que llevo puesto:\nAirwalk\n----Mi nombre:\nJalex\n----Concatenacion de numeros:\n15.57470\n----Todos los elementos en la lista_examen:\n0\nw\nTrue\nNone\n['Cazuela', 'mechero', 'cuchillo', 'cuerda']\n('Element', 'Quicksilver', 'Airwalk')\n{'nombre': 'Jalex', 'edad': 47}\n15.57\n----Todos los elementos de lista_deseo desde lista_examen:\nCazuela\nmechero\ncuchillo\ncuerda\n----Todos los elementos de tupla_ropa seguido de la cadena '-->' y la posición (int) que ocupa en la tupla:\nElement --> 1\nQuicksilver --> 2\nAirwalk --> 3\n----Cada key de dict_info seguido de la cadena ':' seguido de su value:\nnombre : Jalex\nedad : 47\n----Todos los elementos que ocupen una posición menor a 4 en lista_examen.\n0\nw\nTrue\nNone\n"
+    }
+   ],
    "source": [
     "# Respuesta ejercicio 5\n",
     "print(\"----Segundo elemento de lista_deseo:\")\n",
@@ -279,11 +285,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0 : A\n1 : B\n2 : C\n3 : D\n4 : E\n5 : F\n6 : G\n7 : H\n8 : I\n9 : J\n"
+    }
+   ],
    "source": [
-    "# Respuesta ejercicio 7\n"
+    "# Respuesta ejercicio 7\n",
+    "generador ={0:\"A\", 1:\"B\", 2:\"C\", 3:\"D\", 4:\"E\", 5:\"F\", 6:\"G\", 7:\"H\", 8:\"I\", 9:\"J\" }\n",
+    "for numero, letra in generador.items():\n",
+    "    print(numero,\":\", letra)"
    ]
   },
   {
