--- a/week3/test/Precurse_Exam.ipynb
+++ b/week3/test/Precurse_Exam.ipynb
@@ -328,18 +328,38 @@
     "\n",
     "1. Calcula el número de paradas.\n",
     "\n",
-    "2. Asigna a una varialbe una lista que contenga como elementos el número de pasajeros total en cada parada (in-out).\n",
+    "2. Asigna a una variable una lista que contenga como elementos el número de pasajeros total en cada parada (in-out).\n",
     "\n",
     "3. Calcula el máximo de ocupación de este autobús."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "El numero de paradas es:\n5\nMax ocupacion de autobus :  19\n"
+    }
+   ],
    "source": [
-    "# Respuesta ejercicio 8"
+    "# Respuesta ejercicio 8\n",
+    "stops = [(9, 0), (4, 4), (7, 3), (8, 2), (3, 4)]\n",
+    "# Calcula el número de paradas.\n",
+    "print(\"El numero de paradas es:\")\n",
+    "print(len(stops))\n",
+    "# Asigna a una variable una lista que contenga como elementos el número de pasajeros total en cada parada (in-out).\n",
+    "ocupantes = 0\n",
+    "lista_ocupantes = []\n",
+    "for a,b in stops:\n",
+    "    ocupantes = (ocupantes + (a-b))\n",
+    "    lista_ocupantes.append(ocupantes)\n",
+    "# Calcula el máximo de ocupación de este autobús.\n",
+    "print (\"Max ocupacion de autobus : \", max(lista_ocupantes))"
    ]
   },
   {
