--- a/week3/test/Precurse_Exam.ipynb
+++ b/week3/test/Precurse_Exam.ipynb
@@ -396,7 +396,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Respuesta ejercicio 9"
+    "# Respuesta ejercicio 9\n",
+    "SELECT IBAN FROM Banco, Persona WHERE Persona.Edad > 22 AND Persona.DNI = Banco.DNI; "
    ]
   },
   {
