--- a/week3/test/Precurse_Exam.ipynb
+++ b/week3/test/Precurse_Exam.ipynb
@@ -419,7 +419,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Respuesta ejercicio 10"
+    "# Respuesta ejercicio 10\n",
+    "def venga_que_ya_termino ():\n",
+    "    acum = 1\n",
+    "    while acum > 0:\n",
+    "        x = input(\"Si escribes 'PARAR' nos vamos de cañas.\")\n",
+    "        if x != \"PARAR\":\n",
+    "            acum = acum +1\n",
+    "        else:\n",
+    "            acum = 0\n",
+    "            print(\"Yuhu, a pesar de Wolfram\")\n",
+    "            \n",
+    "venga_que_ya_termino ()"
    ]
   }
  ],
