--- a/week4/day2/exercises/1_Basic_concepts/Chipotle/Solutions.ipynb
+++ b/week4/day2/exercises/1_Basic_concepts/Chipotle/Solutions.ipynb
@@ -18,18 +18,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Step 2. Import the dataset from this [address](https://raw.githubusercontent.com/justmarkham/DAT8/master/data/chipotle.tsv). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'builtin_function_or_method' object has no attribute 'reshape'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-51375abb065e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m# define array\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;31m# split input and output\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'builtin_function_or_method' object has no attribute 'reshape'"
+     ]
+    }
+   ],
+   "source": [
+    "import requests \n",
+    "\n",
+    "url=\"https://raw.githubusercontent.com/justmarkham/DAT8/master/data/chipotle.tsv\"\n",
+    "s = requests.get(url).content\n",
+    "\n",
+    "# split input and output\n",
+    "from numpy import array\n",
+    "# define array\n",
+    "data = array.reshape(1,6)\n",
+    "\n",
+    "# split input and output\n",
+    "from numpy import array\n",
+    "array = np.array(s)\n",
+    "print (s)"
    ]
   },
   {
@@ -733,9 +772,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit ('base': conda)",
+   "display_name": "Python 3.8.3 64-bit",
    "language": "python",
-   "name": "python37464bitbasecondadf9388185d494eceb1ea53207dd5bb3f"
+   "name": "python_defaultSpec_1594134099912"
   },
   "language_info": {
    "codemirror_mode": {
