--- a/week4/day1/delivery/eda_library.ipynb
+++ b/week4/day1/delivery/eda_library.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -49,7 +49,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "9673\n"
+     "text": "2966\n"
     }
    ],
    "source": [
@@ -62,7 +62,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "np."
+   ]
   }
  ],
  "metadata": {
@@ -81,7 +84,7 @@
   "pygments_lexer": "ipython3",
   "version": 3,
   "kernelspec": {
-   "name": "python_defaultSpec_1594119300056",
+   "name": "python_defaultSpec_1594130709243",
    "display_name": "Python 3"
   }
  },
