Wolfram solucionado el TODO

--- a/week3/test/Precurse_Exam.ipynb
+++ b/week3/test/Precurse_Exam.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -244,13 +244,13 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Nombre original, Wolfram\nNuevo nombre: Benancio\nEdad de Benancio: 24\n"
+     "text": "Wolfram\nNuevo nombre: Benancio\nEdad de Benancio: 24\n"
     }
    ],
    "source": [
     "# Respuesta ejercicio 6\n",
     "class Humano:\n",
-    "    def _init_(self, edad, altura, nombre):\n",
+    "    def __init__(self, edad, altura, nombre):\n",
     "        self.edad = edad\n",
     "        self.altura = altura\n",
     "        self.nombre = nombre\n",
@@ -260,12 +260,8 @@
     "        nuevo_nombre = input (\"Introducir el nuevo nombre\")\n",
     "        self.nombre = nuevo_nombre\n",
     "\n",
-    "Wolfram = Humano()\n",
-    "Wolfram.edad = 23\n",
-    "Wolfram.altura = 173\n",
-    "Wolfram.nombre = Wolfram\n",
-    "''' TODO no entiendo porque la siguiente linea no me permite imprimir si escribo print(Wolfram.nombre) me da error'''\n",
-    "print (\"Nombre original, Wolfram\") # Si. es una ñapa.\n",
+    "Wolfram = Humano(edad=23, altura=173, nombre= \"Wolfram\")\n",
+    "print (Wolfram.nombre) \n",
     "Wolfram.registro_nombre()\n",
     "Wolfram.cumplir_edad()\n",
     "print (\"Nuevo nombre:\", Wolfram.nombre)\n",
