--- a/week3/test/Precurse_Exam.ipynb
+++ b/week3/test/Precurse_Exam.ipynb
@@ -45,11 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Se ha generado la siguiente lista de n_gramas:\n['ZApat', 'Apato', 'patol', 'atola', 'tolan', 'oland', 'landi', 'andia']\n"
+    }
+   ],
    "source": [
     "# Respuesta ejercicio 2\n",
     "def n_grama ():\n",
@@ -58,7 +64,7 @@
     "    numero = int(input (\"introduce un numero entero\"))\n",
     "    lista_n_gramas = []\n",
     "    if numero >= p:\n",
-    "        print(\"Disculpa,para\",palabra,\"el numero debe ser menor que\", p,\". \\n Volvemos a empezar.\")\n",
+    "        print(\"Disculpa,pero\",palabra,\"el numero debe ser menor que\", p,\". \\n Volvemos a empezar.\")\n",
     "        n_grama()\n",
     "    else:\n",
     "        a = 0\n",
