--- a/week1/day4/exercises/Exercises.ipynb
+++ b/week1/day4/exercises/Exercises.ipynb
@@ -15,18 +15,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "0\n1\n2\n3\n4\n"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "for i in range(5):\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "lista = [0,4, 11, 25, 8, 14, 20, 998,459, 844, 4654, 445, 4594984, 4564, 44]\n",
+    "for i, x in enumerate(lista):\n",
+    "    print (i,x)"
    ]
   },
   {
@@ -44,6 +53,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "lista = [0,4, 11, 25, 8, 14, 20, 998,459, 844, 4654, 445, 459, 4984, 4564, 44]\n",
+    "def mayor_que_7(lista):\n",
+    "    for i in lista:\n",
+    "        if i > 7:\n",
+    "            print(i)\n",
+    "            break\n",
+    "mayor_que_7 (lista)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -55,6 +81,25 @@
    "metadata": {},
    "source": [
     "- Recorrer una lista y, mientras la el valor que se está recorriendo sea menor a 60, seguir. Cuando termine, mostrar por pantalla el último elemento recorrido."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "lista = [0,4, 11, 25, 8, 14, 20, 998,459, 844, 4654, 445, 459, 4984, 4564, 44]\n",
+    "def mayor60():\n",
+    "    for elemento in lista:\n",
+    "        if elemento < 60:\n",
+    "            continue\n",
+    "        else:\n",
+    "            print(elemento)\n",
+    "            break\n",
+    "mayor60()"
    ]
   },
   {
@@ -84,6 +129,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_ejercicio = [\"primero\", \"SEGUNDO\", 77, [2,\"9\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def funcion_refuerzo (lista):\n",
+    "# crear y guardar en una variable el cuarto elemento de 'lista'\n",
+    "    x = lista[3]\n",
+    "# otra variable dentro de la función debe CONCATENAR los dos elementos que tiene.\n",
+    "    y = (str(lista[3][0]) + lista[3][1])\n",
+    "# otra variable que contenga el valor de la SUMA de los dos elementos.\n",
+    "    z = (lista[3][0] + int(lista[3][1]))\n",
+    "    print (x)\n",
+    "    print (y)\n",
+    "    print (z)\n",
+    "funcion_refuerzo(lista_ejercicio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Crear una función que concatene los dos Strings y los muestre por pantalla. La función tiene dos parámetros de entrada: 'string_uno' y 'string_dos'. Invocar a la función con los dos primeros Strings de 'lista_ejercicio'\n",
+    "def concatenaitor (string_uno, string_dos):\n",
+    "    print( string_uno + string_dos )\n",
+    "concatenaitor(string_uno = lista_ejercicio[0], string_dos = lista_ejercicio[1])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -91,10 +180,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "¡Hola, Waldorf!\n"
+    }
+   ],
+   "source": [
+    "def saludo():\n",
+    "    x = input (\"¿Cual es tu nombre, torpedo?:\")\n",
+    "    print (\"¡Hola, \"+ x +\"!\")\n",
+    "saludo()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "3. Escribir un programa que pregunte el nombre del usuario en la consola y después de que el usuario lo introduzca muestre por pantalla x tiene z letras, donde x es el nombre de usuario en mayúsculas y z es el número de letras que tienen el nombre."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'builtin_function_or_method' object has no attribute 'x'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-36-ef18d16668ab>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mz\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupper\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mlen_nombre\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-36-ef18d16668ab>\u001b[0m in \u001b[0;36mlen_nombre\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m\"¿Cual es tu nombre, usuario de la consola?:\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mz\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupper\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mlen_nombre\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'builtin_function_or_method' object has no attribute 'x'"
+     ]
+    }
+   ],
+   "source": [
+    "def len_nombre():\n",
+    "    x = input (\"¿Cual es tu nombre, usuario de la consola?:\")\n",
+    "    z = len(x)\n",
+    "    print (x.upper + \"tiene\" + str(z) + \"letras.\")\n",
+    "len_nombre()"
    ]
   },
   {
