W4d3 hasta aqui puedo leer

--- a/week4/day2/exercises/1_Basic_concepts/Chipotle/Solutions.ipynb
+++ b/week4/day2/exercises/1_Basic_concepts/Chipotle/Solutions.ipynb
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 99,
    "metadata": {
     "tags": []
    },
@@ -481,15 +481,36 @@
     }
    ],
    "source": [
+    "# First i am grouping the list by item name and adding quantities to get the sum\n",
+    "\"\"\"The second column is useless. TODO I should learn how to get rid of it..\"\"\"\n",
     "df2 = chipo.groupby(['item_name']).sum()\n",
     "print(df2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "761"
+     },
+     "metadata": {},
+     "execution_count": 100
+    }
+   ],
+   "source": [
+    "# now that I have a little list I can review with my eyes, I can see the most ordered dish was Chicken bowl.\n",
+    "# just to confirm.. but TODO add this line to the next one with a WHEN o algo\n",
+    "df2.quantity.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {
-    "collapsed": false,
     "tags": []
    },
    "outputs": [
@@ -500,25 +521,8 @@
     }
    ],
    "source": [
+    "# I can now print the relationship among item:name and quantity. TODO reduce all to a single formuleision \n",
     "print(df2.loc[[\"Chicken Bowl\"]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "761"
-     },
-     "metadata": {},
-     "execution_count": 96
-    }
-   ],
-   "source": [
-    "df2.quantity.max()"
    ]
   },
   {
@@ -530,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -538,15 +542,16 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "   order_id  quantity     item_name choice_description item_price\n0       926         1  Chicken Bowl        [Diet Coke]     $8.75 ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>order_id</th>\n      <th>quantity</th>\n      <th>item_name</th>\n      <th>choice_description</th>\n      <th>item_price</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>926</td>\n      <td>1</td>\n      <td>Chicken Bowl</td>\n      <td>[Diet Coke]</td>\n      <td>$8.75</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "0    [Diet Coke]\ndtype: object"
      },
      "metadata": {},
-     "execution_count": 93
+     "execution_count": 108
     }
    ],
    "source": [
-    "chipo.mode()"
+    "# I really liked this one.\n",
+    "mo2 = chipo.choice_description.mode()\n",
+    "mo2"
    ]
   },
   {
