--- a/week1/day4/exercises/Exercises.ipynb
+++ b/week1/day4/exercises/Exercises.ipynb
@@ -208,29 +208,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "'builtin_function_or_method' object has no attribute 'x'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-36-ef18d16668ab>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mz\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupper\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mlen_nombre\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-36-ef18d16668ab>\u001b[0m in \u001b[0;36mlen_nombre\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m\"¿Cual es tu nombre, usuario de la consola?:\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mz\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupper\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mlen_nombre\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'builtin_function_or_method' object has no attribute 'x'"
-     ]
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "JUANTONIO tiene 9 letras.\n"
     }
    ],
    "source": [
     "def len_nombre():\n",
-    "    x = input (\"¿Cual es tu nombre, usuario de la consola?:\")\n",
-    "    z = len(x)\n",
-    "    print (x.upper + \"tiene\" + str(z) + \"letras.\")\n",
+    "    r = input (\"¿Cual es tu nombre, usuario de la consola?:\")\n",
+    "    z = len(r)\n",
+    "    r = r.upper()\n",
+    "    print(r, \"tiene\", z , \"letras.\")\n",
     "len_nombre()"
    ]
   },
@@ -239,6 +233,31 @@
    "metadata": {},
    "source": [
     "4. Escribir una función que realice la siguiente operación aritmética ((3+2)^2⋅5)/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "a = 5\nb = 10\nEl resultado es: 7.5 . Aunque 42 habría sido el resultado perfecto\n"
+    }
+   ],
+   "source": [
+    "def WTF_0001():\n",
+    "    a = 3+2\n",
+    "    print(\"a =\", a)\n",
+    "    b = 2*5\n",
+    "    print(\"b =\",b)\n",
+    "    c = a^b\n",
+    "    x = c / 2\n",
+    "    print (\"El resultado es:\", x, \". Aunque 42 habría sido el resultado perfecto\")\n",
+    "WTF_0001()"
    ]
   },
   {
@@ -251,6 +270,22 @@
     "- [[Profesor]] Crear una función que reciba un parámetro de entrada, transforme la entrada a String, cree dos variables que representen al string en dos partes y los retorne.\n",
     "- [[Profesor]] Crear un programa que permita obtener, si existen, todos los números de cuatro dígitos que cumplan la misma condición. (++++++)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"  Este es el enunciado que me manda a la cama XDDD \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
