--- a/week1/day4/exercises/Exercises.ipynb
+++ b/week1/day4/exercises/Exercises.ipynb
@@ -273,11 +273,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "3025"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
    "source": [
-    "\"\"\"  Este es el enunciado que me manda a la cama XDDD \"\"\""
+    "x = 30\n",
+    "y = 25\n",
+    "z = (x+y)**2\n",
+    "z"
    ]
   },
   {
@@ -292,6 +304,20 @@
    "metadata": {},
    "source": [
     "6. Crear un programa que, a partir de una lista de números enteros, retorne el número de veces que hay un número par en la lista."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Par_counter (lista):\n",
+    "    num_pares = 0\n",
+    "    for num in lista:\n",
+    "        if num % 2 == 0:\n",
+    "             num_pares += 1\n",
+    "        "
    ]
   }
  ],
