--- a/week1/day4/exercises/Exercises.ipynb
+++ b/week1/day4/exercises/Exercises.ipynb
@@ -308,17 +308,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "El total de numeros pares en la lista es: 6\n"
+    }
+   ],
    "source": [
     "def Par_counter (lista):\n",
     "    num_pares = 0\n",
+    "    num_impares = 0 \n",
     "    for num in lista:\n",
     "        if num % 2 == 0:\n",
-    "             num_pares += 1\n",
-    "        "
+    "            num_pares += 1\n",
+    "        else:\n",
+    "            num_impares += 1 \n",
+    "    print (\"El total de numeros pares en la lista es:\", num_pares )\n",
+    "x = [2,55,864,2163,11,2,48,46,95,411,2,87,987]\n",
+    "Par_counter(lista = x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
